<resources>
    <string name="app_name">UT4_01</string>
    <string name="preferencias">Ajustes</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="datos_personales">Datos personales</string>
    <string name="preferencia_nombre">Nombre</string>
    <string name="preferencia_mayoria_edad">Mayor de edad</string>
    <string name="contacto">Contacto</string>
    <string name="preferencia_email">Email</string>
    <string name="Cargar">Cargar</string>
    <string name="Borrar">Borrar</string>
</resources>